@@ -127,19 +127,19 @@ parent class in order maintain consistency across languages.
 * [http://mail.wikimedia.org/mailman/listinfo/mediawiki-announce MediaWiki release mailing list]",
 
 'portal'		=> 'Community portal',
-'portal-url'		=> '{{ns:project}}:Community Portal',
+'portal-url'		=> 'Project:Community Portal',
 'about'			=> 'About',
 'aboutsite'		=> 'About {{SITENAME}}',
-'aboutpage'		=> '{{ns:project}}:About',
+'aboutpage'		=> 'Project:About',
 'article'		=> 'Content page',
 'help'			=> 'Help',
 'helppage'		=> 'Help:Contents',
 'bugreports'	=> 'Bug reports',
-'bugreportspage' => '{{ns:project}}:Bug_reports',
+'bugreportspage' => 'Project:Bug_reports',
 'sitesupport'   => 'Donations',
-'sitesupport-url' => '{{ns:project}}:Site support',
+'sitesupport-url' => 'Project:Site support',
 'faq'			=> 'FAQ',
-'faqpage'		=> '{{ns:project}}:FAQ',
+'faqpage'		=> 'Project:FAQ',
 'edithelp'		=> 'Editing help',
 'newwindow'		=> '(opens in new window)',
 'edithelppage'	=> 'Help:Editing',
@@ -164,9 +164,9 @@ parent class in order maintain consistency across languages.
 'currentevents-url' => 'Current events',
 
 'disclaimers' => 'Disclaimers',
-'disclaimerpage' => '{{ns:project}}:General_disclaimer',
+'disclaimerpage' => 'Project:General_disclaimer',
 'privacy' => 'Privacy policy',
-'privacypage' => '{{ns:project}}:Privacy_policy',
+'privacypage' => 'Project:Privacy_policy',
 'errorpagetitle' => 'Error',
 'returnto'		=> 'Return to $1.',
 'tagline'      	=> 'From {{SITENAME}}',
@@ -821,7 +821,7 @@ To include the image in a page, use a link in the form
 'fileuploadsummary' => 'Summary:',
 'filestatus' => 'Copyright status',
 'filesource' => 'Source',
-'copyrightpage' => "{{ns:project}}:Copyrights",
+'copyrightpage' => "Project:Copyrights",
 'copyrightpagename' => "{{SITENAME}} copyright",
 'uploadedfiles'	=> 'Uploaded files',
 'ignorewarning'        => 'Ignore warning and save file anyway.',
